LIBDC-950. Local Fedora 4 Development Environment.
Copied local development environment setup documentation from umd/fcrepo4.

 https://issues.umd.edu/browse/LIBDC-950